name:                c2smtR
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable c2smtR
  hs-source-dirs: src/
  main-is: Main.hs

  build-depends: base,
                 cmdargs,
                 minisat,
                 language-c ==0.4.5,
                 syb,
                 smtLib,
                 data-binary-ieee754,
                 containers,
                 mtl,
                 pretty

